--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "AGPL-3.0",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "shelljs": "^0.8.5",
     "sync-request": "^6.1.0"
   }
